Temporary removed test files from local

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 hs_err_pid*
 
 target/
+src/test/java
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -43,4 +44,3 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
-/src/test/java/*
