Hosted on discloud

--- a/discloud.config
+++ b/discloud.config
@@ -1,6 +1,6 @@
-ID=978649404816916521
+NAME=IAmNotARobot
 TYPE=bot
-MAIN=IAmNotARobot-0.0.1-SNAPSHOT.jar
+MAIN=bot.jar
 RAM=100
 AUTORESTART=true
 VERSION=latest
