--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 			<artifactId>json</artifactId>
 			<version>20220320</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.0</version> <!-- Use the latest version -->
+		</dependency>
 	</dependencies>
 
 	<build>
