--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 	<name>IAmNotARobot</name>
 
 	<properties>
-		<maven.compiler.source>21</maven.compiler.source>
-		<maven.compiler.target>21</maven.compiler.target>
-		<java.version>21</java.version>
+		<maven.compiler.source>18</maven.compiler.source>
+		<maven.compiler.target>18</maven.compiler.target>
+		<java.version>18</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -18,6 +18,12 @@
 			<groupId>net.dv8tion</groupId>
 			<artifactId>JDA</artifactId>
 			<version>5.0.0-alpha.21</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>33.0.0-jre</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
@@ -61,7 +67,6 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>3.2.3</version>
-			<type>maven-plugin</type>
 		</dependency>
 
 		<dependency>
@@ -122,20 +127,6 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.4.1</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
 					<execution>
@@ -166,8 +157,7 @@
 						</goals>
 						<configuration>
 							<target>
-								<copy file="target/${project.build.finalName}.jar" tofile="bot.jar" overwrite="true" />
-								<copy file="bot.jar" todir="${basedir}" overwrite="true" />
+								<move file="target/bot.zip" todir="${env.USERPROFILE}/Desktop" overwrite="true" />
 							</target>
 						</configuration>
 					</execution>
