--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest  # Use a Linux-based runner with Maven
-
+    env:
+      DISCORD_JDA_KEY: ${{ secrets.DISCORD_JDA_KEY }}
+      GOOGLE_SCRIPT_TRANSLATOR_DEPLOYMENT_ID: ${{ secrets.GOOGLE_SCRIPT_TRANSLATOR_DEPLOYMENT_ID }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 18
