reverted back to secrets

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-latest  # Use a Linux-based runner with Maven
     env:
-      DISCORD_JDA_KEY: ${{ env.DISCORD_JDA_KEY }}
-      GOOGLE_SCRIPT_TRANSLATOR_DEPLOYMENT_ID: ${{ env.GOOGLE_SCRIPT_TRANSLATOR_DEPLOYMENT_ID }}
-      CURRENCY_TRANSLATOR_API_KEY: ${{ env.CURRENCY_TRANSLATOR_API_KEY }}
+      DISCORD_JDA_KEY: ${{ secrets.DISCORD_JDA_KEY }}
+      GOOGLE_SCRIPT_TRANSLATOR_DEPLOYMENT_ID: ${{ secrets.GOOGLE_SCRIPT_TRANSLATOR_DEPLOYMENT_ID }}
+      CURRENCY_TRANSLATOR_API_KEY: ${{ secrets.CURRENCY_TRANSLATOR_API_KEY }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 18
