Change clean package to clean test. Package cannot be done when .env does not exist.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
           cache: maven  # Cache Maven dependencies for faster builds
 
       - name: Build and test with Maven
-        run: mvn clean package
+        run: mvn clean test
 
       - name: Upload packaged artifact
         uses: actions/upload-artifact@v3
