--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,8 +22,13 @@ jobs:
           distribution: 'temurin'
           cache: maven  # Cache Maven dependencies for faster builds
 
+      - uses: actions/create-env-file@v3
+        with:
+          env-file: .env
+          env-vars: DISCORD_JDA_KEY, GOOGLE_SCRIPT_TRANSLATOR_DEPLOYMENT_ID, CURRENCY_TRANSLATOR_API_KEY
+
       - name: Build and test with Maven
-        run: mvn clean test
+        run: mvn clean package
 
       - name: Upload packaged artifact
         uses: actions/upload-artifact@v3
