--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,10 +22,11 @@ jobs:
           distribution: 'temurin'
           cache: maven  # Cache Maven dependencies for faster builds
 
-      - uses: actions/create-env-file@v3
-        with:
-          env-file: .env
-          env-vars: DISCORD_JDA_KEY, GOOGLE_SCRIPT_TRANSLATOR_DEPLOYMENT_ID, CURRENCY_TRANSLATOR_API_KEY
+      - name: Create .env file
+        run: |
+          echo "MY_SECRET_KEY=${{ secrets.DISCORD_JDA_KEY }}" > .env
+          echo "ANOTHER_SECRET=${{ secrets.GOOGLE_SCRIPT_TRANSLATOR_DEPLOYMENT_ID }}" >> .env
+          echo "ANOTHER_SECRET=${{ secrets.CURRENCY_TRANSLATOR_API_KEY }}" >> .env
 
       - name: Build and test with Maven
         run: mvn clean package
