--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: bot.zip
-          path: target/bot.zip
+          path: ${{ env.USERPROFILE }}/Desktop/bot.zip
