Change generated zip file name from bot.zip to bot

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Upload packaged artifact
         uses: actions/upload-artifact@v3
         with:
-          name: bot.zip
+          name: bot
           path: /home/runner/work/Im-not-a-robot/Im-not-a-robot/${env.USERPROFILE}/Desktop
