Change package to test on workflow

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
           cache: maven  # Cache Maven dependencies for faster builds
 
       - name: Build and test with Maven
-        run: mvn clean package
+        run: mvn clean test
